# Phoenix

./: .gitignore  .gitmodules  CMakeLists.txt  CleanDeps.bat  Configure.bat  LICENSE  Make.ps1  Makefile.mk  ReadMe.md  configure.ps1  index.html  params.json  upsub.bat
Plugins/: TinyCC.txt  rtmaker.bat
Task/: ClangGet.ps1  CreateNMake.ps1  CreatePhoenixPackage.ps1  librarychecker.ps1
ThirdPartyLicense/: SQLite  ThridPartyUseNotes.txt  ftp  log4z  manualgc  mksh.txt  tinyxml2
design/: NotificationWindow.pptx  PhoenixUI.pptx
doc/: PackageRuntime.md
include/: .gitignore  CharUtility.h  Phoenix.h  Version.h.in  charT.h  version.h
lib/: .gitignore  Support.mk  build.mk
lib/JSONResolve/: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  JSONResolve.h  LICENSE  README.md
lib/JSONResolve/include/: mjson.hpp
lib/JSONResolve/include/mjson/: Parser.hpp  Token.hpp  Utilities.hpp  Value.hpp  ValueType.hpp
lib/JSONResolve/src/: Parser.cpp  Token.cpp  Utilities.cpp  Value.cpp  ValueType.cpp
lib/JSONResolve/test/: CMakeLists.txt
lib/JSONResolve/test/src/: ParserTest.cpp  ParserTest.hpp  SerializerTest.cpp  SerializerTest.hpp  UtilitiesTest.cpp  UtilitiesTest.hpp
msbuild/: Phoenix.ARM.props  Phoenix.props  Phoenix.x64.props
source/: Arguments.hpp  ArgumentsFlow.cpp  Builder.ps1  Direct2D.hpp  Direct2DResourceManager.cpp  EditorRender.cpp  EditorRender.hpp  FontAwesome.cpp  FontAwesome.hpp  Header.hpp  IFileWindowUI.cpp  IModalWindow.hpp  ManagerThread.cpp  MessageCustom.hpp  MessageWindow.cpp  MessageWindow.hpp  Mutex.cpp  Phoenix.cpp  Phoenix.exe.manifest  Phoenix.mk  Phoenix.rc  PhoenixDPIUtils.cpp  PhoenixIFileWindowUI.cpp  PhoenixIOCP.cpp  PhoenixInterface.h  PhoenixStandardIO.cpp  PhoenixThread.cpp  PhoenixThread.hpp  PhoenixUI.h  PhoenixWindow.cpp  ResizeUITab.hpp  Resource.h  SearchWindow.cpp  SearchWindowSelf.cpp  TaskProcess.cpp  TaskProcess.hpp  UIWindow.cpp  UIWindow.h  apilist.txt  cl.manifest.xml  (+3 more)
(+685 files in other folders)
