CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(mjson CXX)

INCLUDE_DIRECTORIES(SYSTEM ./include)
FILE(GLOB_RECURSE source "./src/*.cpp" "./include/mjson/*.hpp")

ADD_LIBRARY(mjson SHARED ${source})
ADD_LIBRARY(mjsonstatic STATIC ${source})

SET_TARGET_PROPERTIES(mjson PROPERTIES LIBRARY_OUTPUT_DIRECTORY ./lib)
SET_TARGET_PROPERTIES(mjsonstatic PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ./lib OUTPUT_NAME mjson)

INSTALL(TARGETS mjson mjsonstatic DESTINATION lib)
INSTALL(DIRECTORY "./include/" DESTINATION include FILES_MATCHING PATTERN "*.hpp")
